fixing height shifts

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -86,8 +86,6 @@ button#demo-customized-button {
 
 .cover-wrapper img {
   width: 100%;
-  height: 100%;
-  max-height: 330px;
   object-fit: cover;
 }
 
@@ -142,11 +140,6 @@ button#demo-customized-button {
 #book-details .book-cover {
   position: sticky;
   top: 4rem;
-}
-
-.book-cover img {
-  width: 100%;
-  height: auto;
 }
 
 .summary {
